RESOLVED FIXED196634
Element::isFocusable() debug asserts too frequently
https://bugs.webkit.org/show_bug.cgi?id=196634
Summary Element::isFocusable() debug asserts too frequently
Ryosuke Niwa
Reported 2019-04-04 16:46:27 PDT
Element::isFocusable() debug asserts too frequently
Attachments
Disables the assertion (1.38 KB, patch)
2019-04-04 16:47 PDT, Ryosuke Niwa
no flags
Updated the comment (1.46 KB, patch)
2019-04-04 16:56 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2019-04-04 16:47:12 PDT
Created attachment 366770 [details] Disables the assertion
Geoffrey Garen
Comment 2 2019-04-04 16:52:10 PDT
Comment on attachment 366770 [details] Disables the assertion View in context: https://bugs.webkit.org/attachment.cgi?id=366770&action=review Can you cite a bug report with steps to reproduce in this FIXME? If we just keep an abstract FIXME, we're preventing future developers from adding that assertion back. > Source/WebCore/dom/Element.cpp:556 > + // FIXME: We should be ablet to assert !needsStyleRecalc() || !document().childNeedsStyleRecalc(). able
Ryosuke Niwa
Comment 3 2019-04-04 16:54:58 PDT
(In reply to Geoffrey Garen from comment #2) > Comment on attachment 366770 [details] > Disables the assertion > > View in context: > https://bugs.webkit.org/attachment.cgi?id=366770&action=review > > Can you cite a bug report with steps to reproduce in this FIXME? Apparently this happens on Gmail and Microsoft Exchange (website). I can add that to FIXME.
Conrad Shultz
Comment 4 2019-04-04 16:55:07 PDT
Ryosuke Niwa
Comment 5 2019-04-04 16:56:23 PDT
Created attachment 366773 [details] Updated the comment
Geoffrey Garen
Comment 6 2019-04-04 16:58:16 PDT
Comment on attachment 366773 [details] Updated the comment r=me
Ryosuke Niwa
Comment 7 2019-04-04 18:09:45 PDT
Comment on attachment 366773 [details] Updated the comment Clearing flags on attachment: 366773 Committed r243923: <https://trac.webkit.org/changeset/243923>
Ryosuke Niwa
Comment 8 2019-04-04 18:09:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.