Element::isFocusable() debug asserts too frequently https://bugs.webkit.org/show_bug.cgi?id=196634

Reviewed by Geoffrey Garen.

Remove the debug assertion for now.

* dom/Element.cpp:
(WebCore::Element::isFocusable const):


Canonical link: https://commits.webkit.org/210913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243923 268f45cc-cd09-0410-ab3c-d52691b4dbfc